--- a/WebHooks/style.css
+++ b/WebHooks/style.css
@@ -2,6 +2,8 @@
 
 * {
     font-family: Montserrat, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 body {
@@ -10,7 +12,7 @@ body {
 }
 .form, .form #protected {
     display: flex;
-    height: 100vh;
+    height: 75vh;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -39,3 +41,25 @@ body {
 .send:hover, .form__input:hover {
     background-color: #ffffff;
 }
+
+.header {
+    padding: 30px;
+    display: flex;
+    align-items: center;
+  }
+  .header * {
+    margin: 8px;
+  }
+  .header__logo {
+    width: 64px;
+    border-radius: 8px;
+  }
+  .header__title {
+    color: #fff;
+    font-weight: 500;
+    font-size: 40px;
+  }
+  .header__title span {
+    color: #f9d32f;
+    font-weight: 700;
+  }
